--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,7 @@ main div{
 div[class="功能区图标"] img{
     width: 30%;
     padding-left: 25%;
+    vertical-align: middle;
 }
 
 #主界面{
@@ -142,16 +143,31 @@ div[class="功能区图标"] img{
 }
 
 aside{
-    display: flex;
     background-color: #ffffff;
+    display: flex;
     padding-left: 20px;
+    padding-bottom: 80%;
     border-left:20px solid #f6f6f6;
     border-top: 130px solid #f6f6f6;
     flex-direction: column;
 }
 
-.功能区{
+.功能区,.功能区2{
     display: flex;
     flex-direction: row;
 }
 
+.功能区2 p{
+    padding-left: 37px;
+    padding-right: 37px;
+    color: #787b83;
+}
+
+div[class="付费区图标"] img{
+    width: 50%;
+}
+
+.付费区1,.付费区2{
+    display: flex;
+    flex-direction: row;
+}
